Port Schedule From Previous Implementation

--- a/layout.html
+++ b/layout.html
@@ -18,7 +18,7 @@
                 <span style="font-weight: 300; margin-right: 6px" md-colors="::{color: 'primary-800'}">HUB</span>
             </header>
             <md-content md-colors="::{background: 'accent-900'}" flex>
-                <md-list ng-controller="sidenav" flex>
+                <md-list ng-controller="Sidenav" flex>
                     <md-list-item class="md-1-line" ng-repeat="link in links" ng-click="redirect(link.title)">
                         <md-icon md-font-icon="fa fa-{{ link.icon }} fa-fw" class="md-avatar-icon"></md-icon>
                         <div class="md-list-item-text" flex>
@@ -29,15 +29,15 @@
             </md-content>
         </md-sidenav>
 
-        <div flex>
-            <md-toolbar ng-controller="toolbar" md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
+        <div layout="column" flex>
+            <md-toolbar ng-controller="Toolbar" md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
                 <div class="md-toolbar-tools" id="toolbar">
                     <span flex></span>
                     <md-button ng-hide="sid" class="md-primary md-hue-2" ng-click="login($event)">Login</md-button>
                     <h2 ng-show="sid" md-colors="::{color: 'accent-800'}">Welcome {{ sid }}</h2>
                 </div>
             </md-toolbar>
-            <ng-view></ng-view>
+            <ng-view layout="column" layout-margin flex></ng-view>
         </div>
 
         <!-- Angular Material requires Angular.js Libraries -->
