Fill Dashboard Page With Content

--- a/calendar.html
+++ b/calendar.html
@@ -1,4 +1,4 @@
-<md-card flex layout="column" style="overflow: hidden">
+<md-card flex layout="column">
     <calendar-md flex style="height: 0" 
         calendar-direction="direction"
         on-prev-month="prevMonth"
