Fill Courses Page & Globalize Courses Info

--- a/schedule.html
+++ b/schedule.html
@@ -44,8 +44,8 @@
                 </p>
                 <p>
                     <md-icon md-font-icon="fa fa-calendar-o fa-fw"></md-icon>
-                    {{ days[class.day] }}, {{ dates[class.day] }}
-                    <md-tooltip md-direction="right">Date</md-tooltip>
+                    {{ class.days[0] }} {{ class.days[1] }}
+                    <md-tooltip md-direction="right">Days</md-tooltip>
                 </p>
                 <p>
                     <md-icon md-font-icon="fa fa-hourglass-start fa-fw"></md-icon>
