--- a/calendar.html
+++ b/calendar.html
@@ -1,11 +1,8 @@
 <md-card flex layout="column">
     <calendar-md flex style="height: 0" 
         calendar-direction="direction"
-        on-prev-month="prevMonth"
-        on-next-month="nextMonth"
-        on-day-click="dayClick"
         title-format="'MMMM y'"
-        ng-model='selectedDate'
+        ng-model="selectedDate"
         week-starts-on="firstDayOfWeek"
         tooltips="tooltips"
         day-format="dayFormat"
