--- a/layout.html
+++ b/layout.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/static/css/styles.css">
     </head>
     <body ng-app="UOSHUB" layout="row" md-colors="::{background: 'accent-50'}" ng-cloak>
-        <md-sidenav class="md-sidenav-left" ng-class="status" md-whiteframe="1"
+        <md-sidenav class="md-sidenav-left" ng-class="$ls.status" md-whiteframe="1"
                     md-is-locked-open="$mdMedia('gt-xs')" flex-none>
             <header id="logo" style="padding: 11px" md-colors="::{background: 'grey-A100'}">
                 <md-icon md-svg-icon="logo"></md-icon>
@@ -33,8 +33,9 @@
             <md-toolbar ng-controller="Toolbar" md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
                 <div class="md-toolbar-tools" id="toolbar">
                     <span flex></span>
-                    <md-button ng-hide="sid" class="md-primary md-hue-2" ng-click="login($event)">Login</md-button>
-                    <h2 ng-show="sid" md-colors="::{color: 'accent-800'}">Welcome {{ sid }}</h2>
+                    <h2 ng-show="$ls.sid" md-colors="::{color: 'accent-800'}">Welcome {{ $ls.sid }}</h2>
+                    <md-button ng-if="$ls.status == 'logged-out'" class="md-primary md-hue-2" ng-click="login($event)">Login</md-button>
+                    <md-button ng-if="$ls.status == 'logged-in'" class="md-primary md-hue-2" ng-click="logout()">Logout</md-button>
                 </div>
             </md-toolbar>
             <ng-view layout="column" flex></ng-view>
@@ -54,15 +55,15 @@
                     <md-dialog-content layout-margin>
                         <br>
                         <div layout-margin layout="column">
-                        <md-input-container>
-                            <label>Student ID</label>
-                            <input ng-model="sid" required>
-                        </md-input-container>
-                        <md-input-container>
-                            <label>Password</label>
-                            <input ng-model="pin">
-                        </md-input-container>
-                        <md-button type="submit" class="md-raised md-primary">Login</md-button>
+                            <md-input-container>
+                                <label>Student ID</label>
+                                <input ng-model="$ls.sid" required>
+                            </md-input-container>
+                            <md-input-container>
+                                <label>Password</label>
+                                <input ng-model="$ls.pin">
+                            </md-input-container>
+                            <md-button type="submit" class="md-raised md-primary">Login</md-button>
                         </div>
                     </md-dialog-content>
                 </form>
@@ -75,6 +76,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-aria.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-messages.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-sanitize.min.js"></script>
+        <!-- Angular Local Storage -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
         <!-- Angular Material Library -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.min.js"></script>
         <!-- Angular Material Calendar -->
