--- a/calendar.html
+++ b/calendar.html
@@ -1,11 +1,11 @@
 <md-card flex layout="column">
     <calendar-md flex style="height: 0" 
-        calendar-direction="direction"
+        calendar-direction="$ls.direction"
         title-format="'MMMM y'"
         ng-model="selectedDate"
         week-starts-on="firstDayOfWeek"
         tooltips="tooltips"
-        day-format="dayFormat"
+        day-format="$ls.dayFormat"
         day-label-format="'EEE'"
         day-label-tooltip-format="'EEEE'"
         day-tooltip-format="'fullDate'"
