--- a/layout.html
+++ b/layout.html
@@ -19,8 +19,8 @@
             </md-toolbar>
             <md-content md-colors="::{background: 'accent-900'}" flex>
                 <md-list ng-controller="Sidenav" flex>
-                    <md-list-item class="md-1-line" ng-repeat="link in links" ng-click="loadPage(link.title)"
-                                  md-colors="{background: active[link.title] ? 'accent-700' : 'accent-900'}">
+                    <md-list-item class="md-1-line" ng-repeat="link in links" ng-click="redirect(link.title)"
+                                  md-colors="{background: $loc.path() == '/' + link.title ? 'accent-700' : 'accent-900'}">
                         <md-icon md-font-icon="fa fa-{{ link.icon }} fa-fw" class="md-avatar-icon"></md-icon>
                         <div class="md-list-item-text" flex>
                             <p class="md-title">{{ link.title }}</p>
@@ -33,16 +33,31 @@
         <div layout="column" flex>
             <md-toolbar ng-controller="Toolbar" md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
                 <div class="md-toolbar-tools" id="toolbar">
-                    <md-button id="tighten-btn" ng-show="$ls.loggedIn" class="md-icon-button md-accent md-hue-3" ng-click="$ls.tightNav = !$ls.tightNav">
+                    <md-button ng-show="$ls.loggedIn" class="md-icon-button md-accent md-hue-3"
+                               ng-click="$ls.tightNav = !$ls.tightNav" style="margin-right: 16px">
                         <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
                     </md-button>
+                    <md-button ng-hide="$ls.loggedIn" class="md-accent md-hue-2" ng-click="redirect('Calendar')">Academic Calendar</md-button>
+                    <md-select ng-show="$loc.path() == '/Schedule'" ng-model="$ls.semester" flex="25">
+                        <md-option ng-repeat="semester in semesters track by $index" ng-value="$index" ng-disabled="$index > 1">{{ semester }}</md-option>
+                    </md-select>
+                    <md-select ng-show="$loc.path() == '/Courses'" ng-model="$ls.course" flex="25">
+                        <md-option ng-repeat="(id, course) in $ls.semesters[$ls.semester]" ng-value="id">{{ course.name }}</md-option>
+                    </md-select>
                     <span flex></span>
+                    <md-button ng-show="$loc.path() == '/Schedule'" class="md-accent md-hue-2" ng-click="$ls.semester = -1">Design Your Schedule</md-button>
+                    <md-button ng-show="$loc.path() == '/Email'" class="md-accent md-hue-2" ng-click="null">Write a new Email</md-button>
+                    <md-button ng-show="$loc.path() == '/Calendar'" class="md-accent md-hue-2" ng-click="setDirection('vertical')">List View</md-button>
+                    <md-button ng-show="$loc.path() == '/Calendar'" class="md-accent md-hue-2" ng-click="setDirection('horizontal')">Table View</md-button>
                     <h2 ng-show="$ls.sid" md-colors="::{color: 'accent-800'}">Welcome {{ $ls.sid }}</h2>
                     <md-button ng-if="!$ls.loggedIn" class="md-primary md-hue-2" ng-click="login($event)">Login</md-button>
                     <md-button ng-if="$ls.loggedIn" class="md-primary md-hue-2" ng-click="logout()">Logout</md-button>
                 </div>
             </md-toolbar>
-            <ng-view layout="column" flex></ng-view>
+            <div layout="row" flex>
+                <ng-view layout="column" flex></ng-view>
+                <div id="right-margin" ng-class="{'inflate': !$ls.loggedIn}"></div>
+            </div>
         </div>
 
         <script type="text/ng-template" id="login-dialog">
