--- a/index.html
+++ b/index.html
@@ -1,13 +1,107 @@
-<div layout="row" flex="10"></div>
-<div layout="row" layout-align="center center">
-    <div layout="column" flex>
-        <h1 class="md-display-1" md-colors="{color: 'primary'}">Forget UOS, Try UOS HUB</h1>
-        <p class="md-headline">This'll revolutionize your experience with UOS online services and combine all of them in one place (Blackboard, myUDC, Outlook Email)</p>
-        <md-button class="md-raised" layout-padding ng-click="login($event)">Take a Tour</md-button>
-        <md-button class="md-raised" layout-padding ng-click="login($event)">Get Started, Login</md-button>
-    </div>
-    <div layout="column" layout-margin></div>
-    <div layout="column" flex-none>
-        <img src="{{slideshow}}" width="1000"/>
-    </div>
-</div>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <base href="/">
+        <!-- Angular Material style sheet -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.min.css">
+        <!-- Font Awesome Icon Pack -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- Our Style Sheets -->
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body ng-app="UOSHUB" layout="row" md-colors="::{background: 'accent-50'}" ng-cloak>
+        <md-sidenav class="md-sidenav-left" ng-class="{'open': $ls.loggedIn, 'tight': $ls.loggedIn && $ls.tightNav}"
+                    md-whiteframe="1" md-is-locked-open="$mdMedia('gt-xs')" flex-none>
+            <md-toolbar layout="row" layout-align="start center" md-colors="::{background: 'grey-A100'}">
+                <md-icon md-svg-icon="logo"></md-icon>
+                <b md-colors="::{color: 'accent-800'}">UOS</b>
+                <span md-colors="::{color: 'primary-800'}">HUB</span>
+            </md-toolbar>
+            <md-content md-colors="::{background: 'accent-900'}" flex>
+                <md-list ng-controller="Sidenav" flex>
+                    <md-list-item class="md-1-line" ng-repeat="link in links" ng-click="redirect(link.title)"
+                                  md-colors="{background: $loc.path() == '/' + link.title ? 'accent-700' : 'accent-900'}">
+                        <md-icon md-font-icon="fa fa-{{ link.icon }} fa-fw" class="md-avatar-icon"></md-icon>
+                        <div class="md-list-item-text" flex>
+                            <p class="md-title">{{ link.title }}</p>
+                        </div>
+                    </md-list-item>
+                </md-list>
+            </md-content>
+        </md-sidenav>
+
+        <div layout="column" flex>
+            <md-toolbar ng-controller="Toolbar" md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
+                <div class="md-toolbar-tools" id="toolbar">
+                    <md-button ng-show="$ls.loggedIn" class="md-icon-button md-accent md-hue-3"
+                               ng-click="$ls.tightNav = !$ls.tightNav" style="margin-right: 16px">
+                        <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
+                    </md-button>
+                    <md-button ng-hide="$ls.loggedIn" class="md-accent md-hue-2" ng-click="redirect('Calendar')">Academic Calendar</md-button>
+                    <md-select ng-show="$loc.path() == '/Schedule'" ng-model="$ls.semester" flex="25">
+                        <md-option ng-repeat="semester in semesters track by $index" ng-value="$index" ng-disabled="$index > 1">{{ semester }}</md-option>
+                    </md-select>
+                    <md-select ng-show="$loc.path() == '/Courses'" ng-model="$ls.course" flex="25">
+                        <md-option ng-repeat="(id, course) in $ls.semesters[$ls.semester]" ng-value="id">{{ course.name }}</md-option>
+                    </md-select>
+                    <span flex></span>
+                    <md-button ng-show="$loc.path() == '/Schedule'" class="md-accent md-hue-2" ng-click="$ls.semester = -1">Design Your Schedule</md-button>
+                    <md-button ng-show="$loc.path() == '/Email'" class="md-accent md-hue-2" ng-click="null">Write a new Email</md-button>
+                    <md-button ng-show="$loc.path() == '/Calendar'" class="md-accent md-hue-2" ng-click="setDirection('vertical')">List View</md-button>
+                    <md-button ng-show="$loc.path() == '/Calendar'" class="md-accent md-hue-2" ng-click="setDirection('horizontal')">Table View</md-button>
+                    <h2 ng-show="$ls.sid" md-colors="::{color: 'accent-800'}">Welcome {{ $ls.sid }}</h2>
+                    <md-button ng-if="!$ls.loggedIn" class="md-primary md-hue-2" ng-click="login($event)">Login</md-button>
+                    <md-button ng-if="$ls.loggedIn" class="md-primary md-hue-2" ng-click="logout()">Logout</md-button>
+                </div>
+            </md-toolbar>
+            <div layout="row" flex>
+                <ng-view layout="column" flex></ng-view>
+                <div id="right-margin" ng-class="{'inflate': !$ls.loggedIn}"></div>
+            </div>
+        </div>
+
+        <script type="text/ng-template" id="login-dialog">
+            <md-dialog flex="20" md-colors="{background: 'default-grey-A100'}">
+                <form layout="column" class="no-margin" ng-submit="hide()">
+                    <md-toolbar flex="10">
+                        <div class="md-toolbar-tools" flex>
+                            <span flex>Welcome to UOS HUB</span>
+                            <md-button class="md-icon-button" ng-click="cancel()">
+                                <md-icon md-font-icon="fa fa-times fa-lg"></md-icon>
+                            </md-button>
+                        </div>
+                    </md-toolbar>
+                    <md-dialog-content layout-margin>
+                        <br>
+                        <div layout-margin layout="column">
+                            <md-input-container>
+                                <label>Student ID</label>
+                                <input ng-model="$ls.sid" required>
+                            </md-input-container>
+                            <md-input-container>
+                                <label>Password</label>
+                                <input ng-model="$ls.pin">
+                            </md-input-container>
+                            <md-button type="submit" class="md-raised md-primary">Login</md-button>
+                        </div>
+                    </md-dialog-content>
+                </form>
+            </md-dialog>
+        </script>
+        <!-- Angular Material requires Angular.js Libraries -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-route.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-animate.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-aria.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-messages.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-sanitize.min.js"></script>
+        <!-- Angular Local Storage -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
+        <!-- Angular Material Library -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.min.js"></script>
+        <!-- Angular Material Calendar -->
+        <script src="https://cdn.rawgit.com/bradberger/angular-material-calendar/master/dist/angular-material-calendar.js"></script>
+        <!-- Our Angular App -->
+        <script src="js/app.js"></script>
+    </body>
+</html>
