Add Basic Not Found Page & Fix Button Image

--- a/dashboard.html
+++ b/dashboard.html
@@ -61,8 +61,8 @@
     </md-card>
 </div>
 <div layout="row" flex="40">
-    <md-card flex>
-        <md-button class="no-margin" layout="column" layout-align="end start" layout-padding
+    <md-card flex layout="row">
+        <md-button class="no-margin fill-width" layout="column" layout-align="end start" layout-padding
                    style="background: url('https://images.pexels.com/photos/190948/pexels-photo-190948.jpeg?dl&w=640&h=426') center">
             <div layout="column" layout-align="center center" layout-padding style="font-size: 20px">
                 <div layout="row" layout-margin>
