Cover Old Logo On Slideshow With The New One

--- a/welcome.html
+++ b/welcome.html
@@ -7,7 +7,10 @@
         <md-button class="md-raised" layout-padding ng-click="login($event)">Get Started, Login</md-button>
     </div>
     <div layout="column" layout-margin></div>
-    <div layout="column" flex-none>
+    <div id="slideshow-new-logo" layout="column" flex-none>
         <img src="{{slideshow}}" width="1000"/>
+        <span layout="row" layout-align="center center">
+            <img src="img/favicon.ico">
+        </span>
     </div>
 </div>
