Change Warning Color Back, From Blue To Red

--- a/courses.html
+++ b/courses.html
@@ -142,11 +142,11 @@
                 </md-toolbar>
                 <md-content flex layout-padding>
                     <div layout="column">
-                        <md-input-container style="margin-top: 8px" class="md-block md-warn">
+                        <md-input-container style="margin-top: 8px" class="md-block">
                             <label>Subject</label>
-                            <input>
+                            <input type="text">
                         </md-input-container>
-                        <md-input-container style="margin: -20px 0 0" class="md-block md-warn">
+                        <md-input-container style="margin: -20px 0 0" class="md-block">
                             <label>Description</label>
                             <textarea rows="3"></textarea>
                         </md-input-container>
