--- a/email.html
+++ b/email.html
@@ -1,7 +1,7 @@
 <div layout="row" flex>
     <md-card flex="33">
         <md-content layout="row" flex>
-            <md-tabs class="md-warn md-hue-1" md-selected="filter" flex>
+            <md-tabs md-selected="filter" flex>
                 <md-tab>
                     <md-tab-label>Personal</md-tab-label>
                     <md-tab-body>
