Move Some Common Styles To Layout Styles

--- a/courses.html
+++ b/courses.html
@@ -77,7 +77,7 @@
                         <span flex>Course Info</span>
                     </div>
                 </md-toolbar>
-                <md-content id="course-info" layout="row" flex>
+                <md-content class="course-info-icons" layout="row" flex>
                     <div layout="column" layout-align="space-between start" flex layout-margin>
                         <p>
                             <md-icon md-font-icon="fa fa-user fa-fw"></md-icon>
