--- a/schedule.html
+++ b/schedule.html
@@ -35,7 +35,7 @@
                 </md-button>
             </div>
         </md-toolbar>
-        <md-dialog-content layout="row" layout-margin>
+        <md-dialog-content class="course-info-icons" layout="row" layout-margin>
             <div layout="column" layout-align="space-between start" flex layout-margin>
                 <p>
                     <md-icon md-font-icon="fa fa-user fa-fw"></md-icon>
