--- a/layout.html
+++ b/layout.html
@@ -57,7 +57,7 @@
                 </div>
             </md-toolbar>
             <div id="content" layout="row" flex>
-                <ng-view layout="column" flex></ng-view>
+                <ng-view layout="column" flex ng-cloak></ng-view>
                 <div id="right-margin" ng-class="{'inflate': !$ls.loggedIn}"></div>
             </div>
         </div>
