--- a/schedule.html
+++ b/schedule.html
@@ -1,5 +1,7 @@
+<!-- Schedule Style Sheets -->
+<link rel="stylesheet" href="css/schedule.css">
 <md-card flex>
-    <md-card-content class="card-content" layout="row">
+    <md-card-content layout="row">
         <div class="day as-hours-head" md-colors="::{background: 'green-50'}"></div>
         <div class="day" ng-repeat="day in [1,2,3,4]"></div>
 
@@ -10,7 +12,7 @@
         <div ng-if="!$last" class="half hour" style="top: {{ 5 + height * (0.5 + fraction) }}%"></div>
         <div class="hour" style="top: {{ 5 + fraction * height }}%" ng-repeat-end></div>
 
-        <div ng-repeat="(id, course) in $ls.semesters[$ls.semester]">
+        <div class="classes-container" ng-repeat="(id, course) in $ls.semesters[$ls.semester]">
             <div ng-repeat="point in course.points" ng-click="showClass($event, id, point[0])"
                  class="class" md-colors="::{background: course.color, color: 'grey-A100'}"
                  ng-style="{height: course.length * height + '%', left: point[0] + '%', top: point[1] + '%'}">
