Separate The Styles Of The Rest Of The Pages

--- a/courses.html
+++ b/courses.html
@@ -1,3 +1,5 @@
+<!-- Courses Page Style Sheets -->
+<link rel="stylesheet" href="css/courses.css">
 <div layout="row" flex>
     <md-card flex="30">
         <md-toolbar md-colors="{background: 'brown-600'}">
