--- a/schedule.html
+++ b/schedule.html
@@ -1,4 +1,4 @@
-<!-- Schedule Style Sheets -->
+<!-- Schedule Page Style Sheets -->
 <link rel="stylesheet" href="css/schedule.css">
 <md-card flex>
     <md-card-content layout="row">
