--- a/calendar.html
+++ b/calendar.html
@@ -1,3 +1,5 @@
+<!-- Calendar Page Style Sheets -->
+<link rel="stylesheet" href="css/calendar.css">
 <md-card flex layout="column">
     <calendar-md flex style="height: 0" 
         calendar-direction="$ls.direction"
