--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,5 @@
+<!-- Dashboard Page Style Sheets -->
+<link rel="stylesheet" href="css/dashboard.css">
 <div layout="row" flex="60">
     <md-card flex>
         <md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
