--- a/email.html
+++ b/email.html
@@ -1,3 +1,5 @@
+<!-- Email Page Style Sheets -->
+<link rel="stylesheet" href="css/email.css">
 <div layout="row" flex>
     <md-card flex="33">
         <md-content layout="row" flex>
