--- a/welcome.html
+++ b/welcome.html
@@ -1,3 +1,5 @@
+<!-- Welcome Page Style Sheets -->
+<link rel="stylesheet" href="css/welcome.css">
 <div layout="row" flex="10"></div>
 <div layout="row" layout-align="center center">
     <div layout="column" flex>
