--- a/layout.html
+++ b/layout.html
@@ -101,8 +101,8 @@
         <!-- Angular Material Library -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.min.js"></script>
         <!-- Angular Material Calendar -->
-        <script src="https://cdn.rawgit.com/bradberger/angular-material-calendar/master/dist/angular-material-calendar.js"></script>
-        <!-- Our Angular App -->
-        <script src="js/app.js"></script>
+        <script src="https://cdn.rawgit.com/bradberger/angular-material-calendar/master/dist/angular-material-calendar.min.js"></script>
+        <!-- Layout Of Our Angular App -->
+        <script src="js/layout.js"></script>
     </body>
 </html>
