--- a/layout.html
+++ b/layout.html
@@ -19,7 +19,7 @@
                 <span md-colors="::{color: 'primary-800'}">HUB</span>
             </md-toolbar>
             <md-content md-colors="::{background: 'accent-900'}" flex>
-                <md-list ng-controller="Sidenav" flex>
+                <md-list ng-controller="sidenav" flex>
                     <md-list-item class="md-1-line" ng-repeat="link in links" ng-click="redirect(link.title)"
                                   md-colors="{background: $loc.path() == '/' + link.title ? 'accent-700' : 'accent-900'}">
                         <md-icon md-font-icon="fa fa-{{ link.icon }} fa-fw" class="md-avatar-icon"></md-icon>
@@ -32,7 +32,7 @@
         </md-sidenav>
 
         <div layout="column" flex>
-            <md-toolbar ng-controller="Toolbar" md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
+            <md-toolbar ng-controller="toolbar" md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
                 <div class="md-toolbar-tools" id="toolbar">
                     <md-button ng-show="$ls.loggedIn" class="md-icon-button md-accent md-hue-3"
                                ng-click="$ls.tightNav = !$ls.tightNav" style="margin-right: 16px">
