--- a/layout.html
+++ b/layout.html
@@ -102,7 +102,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.min.js"></script>
         <!-- Angular Material Calendar -->
         <script src="https://cdn.rawgit.com/bradberger/angular-material-calendar/master/dist/angular-material-calendar.min.js"></script>
-        <!-- Layout Of Our Angular App -->
+        <!-- Our Angular App & Scripts -->
+        <script src="js/scripts.js"></script>
         <script src="js/layout.js"></script>
     </body>
 </html>
