--- a/layout.html
+++ b/layout.html
@@ -1,4 +1,4 @@
-<html>
+<html ng-app="UOSHUB" ng-cloak>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>UOS HUB</title>
@@ -10,7 +10,7 @@
         <!-- Our Style Sheets -->
         <link rel="stylesheet" href="css/layout.css">
     </head>
-    <body ng-app="UOSHUB" ng-controller="layout" layout="row" md-colors="::{background: 'accent-50'}" ng-cloak>
+    <body ng-controller="layout" layout="row" md-colors="::{background: 'accent-50'}">
         <md-sidenav id="sidenav" class="md-sidenav-left" ng-class="{'open': $ls.loggedIn, 'tight': $ls.loggedIn && $ls.tightNav}"
                     md-whiteframe="1" md-is-locked-open="$mdMedia('gt-xs')" flex-none>
             <md-toolbar layout="row" layout-align="start center" md-colors="::{background: 'grey-A100'}">
