--- a/layout.html
+++ b/layout.html
@@ -3,12 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>UOS HUB</title>
         <base href="/">
-        <!-- Angular Material style sheet -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.min.css">
-        <!-- Font Awesome Icon Pack -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!-- Our Style Sheets -->
-        <link rel="stylesheet" href="css/layout.css">
+        <!--INCLUDES-->
     </head>
     <body ng-controller="layout" layout="row" md-colors="::{background: 'accent-50'}">
         <md-sidenav id="sidenav" class="md-sidenav-left" ng-class="{'open': $ls.loggedIn, 'tight': $ls.loggedIn && $ls.tightNav}"
@@ -89,21 +84,5 @@
                 </form>
             </md-dialog>
         </script>
-        <!-- Angular Material requires Angular.js Libraries -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-route.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-animate.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-aria.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-messages.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-sanitize.min.js"></script>
-        <!-- Angular Local Storage -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-        <!-- Angular Material Library -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.min.js"></script>
-        <!-- Angular Material Calendar -->
-        <script src="https://cdn.rawgit.com/bradberger/angular-material-calendar/master/dist/angular-material-calendar.min.js"></script>
-        <!-- Our Angular App & Scripts -->
-        <script src="js/scripts.js"></script>
-        <script src="js/layout.js"></script>
     </body>
 </html>
